k8s/delete.yaml

  MANIFEST:
  ---
  # Source: postgresql/templates/primary/networkpolicy.yaml
  kind: NetworkPolicy
  apiVersion: networking.k8s.io/v1
  metadata:
    name: postgresql
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
      app.kubernetes.io/component: primary
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/instance: postgresql
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/component: primary
    policyTypes:
      - Ingress
      - Egress
    egress:
      - {}
    ingress:
      - ports:
          - port: 5432
  ---
  # Source: postgresql/templates/primary/pdb.yaml
  apiVersion: policy/v1
  kind: PodDisruptionBudget
  metadata:
    name: postgresql
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
      app.kubernetes.io/component: primary
  spec:
    maxUnavailable: 1
    selector:
      matchLabels:
        app.kubernetes.io/instance: postgresql
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/component: primary
  ---
  # Source: postgresql/templates/serviceaccount.yaml
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: postgresql
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
  automountServiceAccountToken: false
  ---
  # Source: postgresql/templates/secrets.yaml
  apiVersion: v1
  kind: Secret
  metadata:
    name: postgresql
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
  type: Opaque
  data:
    postgres-password: "MTIzNDU2Nzg5"
    # We don't auto-generate LDAP password when it's not provided as we do for other passwords
  ---
  # Source: postgresql/templates/primary/svc-headless.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: postgresql-hl
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
      app.kubernetes.io/component: primary
    annotations:
  spec:
    type: ClusterIP
    clusterIP: None
    # We want all pods in the StatefulSet to have their addresses published for
    # the sake of the other Postgresql pods even before they're ready, since they
    # have to be able to talk to each other in order to become ready.
    publishNotReadyAddresses: true
    ports:
      - name: tcp-postgresql
        port: 5432
        targetPort: tcp-postgresql
    selector:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  ---
  # Source: postgresql/templates/primary/svc.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: postgresql
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
      app.kubernetes.io/component: primary
  spec:
    type: ClusterIP
    sessionAffinity: None
    ports:
      - name: tcp-postgresql
        port: 5432
        targetPort: tcp-postgresql
        nodePort: null
    selector:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  ---
  # Source: postgresql/templates/primary/statefulset.yaml
  apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: postgresql
    namespace: "sql-databases"
    labels:
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/version: 16.3.0
      helm.sh/chart: postgresql-15.5.11
      app.kubernetes.io/component: primary
  spec:
    replicas: 1
    serviceName: postgresql-hl
    updateStrategy:
      rollingUpdate: {}
      type: RollingUpdate
    selector:
      matchLabels:
        app.kubernetes.io/instance: postgresql
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/component: primary
    template:
      metadata:
        name: postgresql
        labels:
          app.kubernetes.io/instance: postgresql
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: postgresql
          app.kubernetes.io/version: 16.3.0
          helm.sh/chart: postgresql-15.5.11
          app.kubernetes.io/component: primary
      spec:
        serviceAccountName: postgresql

        automountServiceAccountToken: false
        affinity:
          podAffinity:

          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
              - podAffinityTerm:
                  labelSelector:
                    matchLabels:
                      app.kubernetes.io/instance: postgresql
                      app.kubernetes.io/name: postgresql
                      app.kubernetes.io/component: primary
                  topologyKey: kubernetes.io/hostname
                weight: 1
          nodeAffinity:

        securityContext:
          fsGroup: 1001
          fsGroupChangePolicy: Always
          supplementalGroups: []
          sysctls: []
        hostNetwork: false
        hostIPC: false
        containers:
          - name: postgresql
            image: docker.io/bitnami/postgresql:16.3.0-debian-12-r16
            imagePullPolicy: "IfNotPresent"
            securityContext:
              allowPrivilegeEscalation: false
              capabilities:
                drop:
                  - ALL
              privileged: false
              readOnlyRootFilesystem: true
              runAsGroup: 1001
              runAsNonRoot: true
              runAsUser: 1001
              seLinuxOptions: {}
              seccompProfile:
                type: RuntimeDefault
            ports:
              - name: tcp-postgresql
                containerPort: 5432
            livenessProbe:
              failureThreshold: 6
              initialDelaySeconds: 30
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 5
              exec:
                command:
                  - /bin/sh
                  - -c
                  - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
            readinessProbe:
              failureThreshold: 6
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 5
              exec:
                command:
                  - /bin/sh
                  - -c
                  - -e
                  - |
                    exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                    [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            resources:
              limits:
                cpu: 150m
                ephemeral-storage: 1024Mi
                memory: 192Mi
              requests:
                cpu: 100m
                ephemeral-storage: 50Mi
                memory: 128Mi
            volumeMounts:
              - name: empty-dir
                mountPath: /tmp
                subPath: tmp-dir
              - name: empty-dir
                mountPath: /opt/bitnami/postgresql/conf
                subPath: app-conf-dir
              - name: empty-dir
                mountPath: /opt/bitnami/postgresql/tmp
                subPath: app-tmp-dir
              - name: dshm
                mountPath: /dev/shm
              - name: data
                mountPath: /bitnami/postgresql
        volumes:
          - name: empty-dir
            emptyDir: {}
          - name: dshm
            emptyDir:
              medium: Memory
    volumeClaimTemplates:
      - apiVersion: v1
        kind: PersistentVolumeClaim
        metadata:
          name: data
        spec:
          accessModes:
            - "ReadWriteOnce"
          resources:
            requests:
              storage: "8Gi"

  NOTES:
  CHART NAME: postgresql
  CHART VERSION: 15.5.11
  APP VERSION: 16.3.0
